RAM-34 Added min* strength to the DTOs
